Add files missed in previous commits